# DirectX-12-Renderer

./: .gitignore  CMakeLists.txt  d3dx12.h  helpers.h  main.cpp  raytracing.h  vertex.h
dxr/: DXRHelper.h  DXSampleHelper.h
shaders/: Common.hlsl  Hit.hlsl  RayGen.hlsl
